try to fix sign up link not showing up on mobile

--- a/server/frontend/packages/ui/src/styles/auth.css
+++ b/server/frontend/packages/ui/src/styles/auth.css
@@ -176,11 +176,6 @@
     cursor: pointer;
 }
 
-.text-button:hover {
-    all: unset;
-    cursor: pointer;
-}
-
 /* Auth check styles */
 .checking-auth {
     position: absolute;
